--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="vh-100 vw-100">
     <nav class="nav navbar-dark bg-dark justify-content-center align-items-center">
         <a href="/" class="nav-link link-light fw-bolder fs-4">Solicito</a>
         <ul class="d-flex justify-content-center align-items-center h-100 w-75 m-0 p-0">
@@ -23,14 +23,17 @@
             <li class="nav-item">
                 <a class="nav-link link-light" href="tips.html">Tips</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link link-light" href="#"></a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link link-light" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
+                <a class="nav-link link-light" href="todo.html">To do list</a>
+            </li>
         </ul>
     </nav>
+
+    <main class="container-fluid w-100 h-100 d-flex justify-content-center align-items-center text-center flex-column">
+        <h1>Handige tips voor het soliciteren vind je <a href="tips.html" class="link-body-emphasis">hier!</a></h1>
+        <p><a href="bronnen.html">[Lijst met bronnen]</a></p>
+    </main>
+
 
 </body>
 </html>
